Added saving efficiencies to device

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -56,6 +56,7 @@
      <Compile Include="Assets\Scripts\AnswerQuestionQuiz.cs" />
      <Compile Include="Assets\Scripts\CorrectAnswer.cs" />
      <Compile Include="Assets\Scripts\CorrectAnswersManager.cs" />
+     <Compile Include="Assets\Scripts\EfficiencyManager.cs" />
      <Compile Include="Assets\Scripts\IncorrectAnswer.cs" />
      <Compile Include="Assets\Scripts\Manager.cs" />
      <Compile Include="Assets\Scripts\PrefabSelectionAR.cs" />
